--- a/crud-app/src/app/components/subject-list/subject-list.component.html
+++ b/crud-app/src/app/components/subject-list/subject-list.component.html
@@ -32,10 +32,11 @@
 
   <!-- Stats Section -->
   <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
-    <div class="bg-blue-500 p-4 text-white rounded shadow-lg">
-      <h2 class="text-lg font-bold">Total Subjects</h2>
-      <p class="text-2xl font-semibold">{{ totalSubjects }}</p>
-    </div>
+    <app-card 
+        [title]="'Total Subjects'" 
+        [value]="totalSubjects" 
+        [color]="'bg-blue-500'">
+    </app-card>
   </div>
 
   <!-- Filter Dropdown -->
@@ -52,7 +53,7 @@
     </select>
   </div>
 
-<div class="relative overflow-x-auto">
+<!-- <div class="relative overflow-x-auto">
   <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
           <tr>
@@ -76,4 +77,29 @@
           </tr>
       </tbody>
   </table>
+</div> -->
+
+<div class="relative overflow-x-auto">
+  <app-table>
+    <!-- Thead goes here with an attribute 'tableHead' -->
+    <thead tableHead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+      <tr>
+        <th scope="col" class="px-6 py-3">Name</th>
+        <th scope="col" class="px-6 py-3">Students</th>
+      </tr>
+    </thead>
+  
+    <!-- Tbody goes here with an attribute 'tableBody' -->
+    <tbody tableBody>
+      <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200" *ngFor="let subjects of filteredSubjects">
+        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+          {{ subjects.name }}
+        </th>
+        <td class="px-6 py-4">
+            <span *ngIf="subjects.students.length > 0">{{ subjects.students.join(', ') }}</span>
+            <span *ngIf="subjects.students.length === 0">No Subjects</span>
+        </td>
+      </tr>
+    </tbody>
+  </app-table>
 </div>
